--- a/website/docusaurus-theme/theme/DocSidebarItems/styles.css
+++ b/website/docusaurus-theme/theme/DocSidebarItems/styles.css
@@ -1,11 +1,22 @@
 .theme-doc-sidebar-item-link.theme-doc-sidebar-item-link-level-1.menu__list-item,
-.theme-doc-sidebar-item-category-level-1 .menu__list-item-collapsible {
+.theme-doc-sidebar-item-category-level-1 {
     font-weight: 600;
-}
-
-.theme-doc-sidebar-item-category-level-1 .menu__list-item-collapsible {
-    border-top: 0.5px solid;
     border-top-color: var(--ifm-category-color, var(--ifm-menu-color-background-active));
     border-radius: 0;
-    padding-block: 0.25em;
+}
+
+.theme-doc-sidebar-menu .menu__list .menu__list .menu__list-item {
+    position: relative;
+    padding-left: 0;
+    margin: 0;
+}
+
+.theme-doc-sidebar-menu .menu__list .menu__list .menu__list-item::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 0.5px;
+    background-color: var(--ifm-color-primary); /* connector line color */
 }
